--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 compiler: gcc
 script:
   - gcc -Wall -g spell.c dictionary.c -o spell
-  - ./spell
+  - ./spell a_tale_of_two_cities.txt wordlist.txt
 
 after_success:
   - bash <("Successful")
