--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ compiler: gcc
 script:
   - gcc -Wall -g spell.c dictionary.c -o spell
   - ./spell a_tale_of_two_cities.txt wordlist.txt
+  - gcov spell.c
 
 after_success:
   - bash <("Successful")
